[build-system]
requires = ["setuptools>=75.0", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "lume-pva"
description = ""
readme = "README.md"
authors = [
  { name = "SLAC National Accelerator Laboratory"},
]
keywords = ["machine learning", "accelerator physics"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "numpy",
    "pyyaml",
    "lume-base",
    "pvua @ git+https://github.com/slac-epics/pvua",
    "caproto"
]
dynamic = ["version"]
[tool.setuptools_scm]
version_file = "lume_pva/_version.py"

[project.optional-dependencies]
torch = [
    "torch",
    "lume-torch @ git+https://github.com/lume-science/lume-torch",
]
dev = [
    "pre-commit",
    "pytest"
]
docs = [
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mkdocs-include-markdown-plugin"
]

[project.urls]
Homepage = "https://github.com/lume-science/lume-pva"
"Bug Tracker" = "https://github.com/lume-science/lume-pva/issues"

[project.license]
file = "LICENSE"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
include = [ "lume_pva", ]
namespaces = false

[tool.ruff]

[tool.pytest.ini_options]
log_cli_level = "info"
log_level = "debug"
testpaths = ["tests"]
